Fix overflow shadow localization;

--- a/assets/section-footer.css
+++ b/assets/section-footer.css
@@ -251,6 +251,10 @@
   color: rgba(var(--color-foreground), 0.75);
 }
 
+.footer__localization {
+  z-index: 0;
+}
+
 @media screen and (min-width: 750px) {
   .footer__localization {
     padding: 0.4rem 0;
@@ -306,7 +310,7 @@
   text-align: left;
   min-height: calc(4rem + var(--inputs-border-width) * 2);
   min-width: calc(7rem + var(--inputs-border-width) * 2);
-  z-index: 0;
+  background: rgb(var(--color-background));
 }
 
 .disclosure__button.localization-form__select {
